# StS_Correction_Problem

./: .gitignore  CMakeLists.txt  README.md
include/: Algorithme.h  Case.h  DistanceLevenshtein.h  Exception.h  Instance.h  Sequence.h  Solution.h  Test.h
src/: Algorithme.cpp  Case.cpp  DistanceLevenshtein.cpp  Exception.cpp  Instance.cpp  Sequence.cpp  Solution.cpp  Test.cpp  main.cpp
